# invoice_automation

./: .gitignore  README.md  requirements.txt  setup.cfg
excel_sheets/: 2022.02.28 Test Invoice to automate.xlsx
src/: logging_file.txt  main.py  ronald_Sheet_Serializer_Observer_2022-05-02
src/excel_analytics/: utils.py
src/scripts/: main.py
